<resources>
    <string name="app_name">Newser</string>
    <string name="deskripsi">Sandiaga Uno bersama dengann Prabowo</string>
    <string name="title_berita_utama">Sandiaga Duduk Sebelah Prabowo di Istana, Janjian Ketemu Lagi</string>
    <string name="desc_berita_utama"><b>Jakarta</b> - Menparekraf Sandiaga Uno duduk bersebelahan dengan Menteri Pertahanan Prabowo Subianto di acara pembayaran zakat ke Baznas di Istana Merdeka. Sandiaga mengungkapkan akan melakukan pertemuan lagi dengan Prabowo.
\nUntuk diketahui, pembayaran zakat mal ke Baznas berlangsung di Istana Merdeka, Jakarta Pusat, Selasa (28/3/2023). Presiden Jokowi dan Wapres Maruf Amin beserta jajaran kabinet membayar zakat di lokasi.
    </string>
    <string name="selengkapnya">Selengkapnya ></string>
    <string name="share">Bagikan Berita</string>
    <string name="about_1">Penulis : Angel Silaban</string>
    <string name="about_2">Editor : Park Chanyeol</string>
    <string name="terbaru">Terbaru</string>
    <string name="nasional">Nasional</string>
    <string name="internasional">Internasional</string>
    <string name="olahraga">Olahraga</string>
    <string name="ekonomi">Ekonomi</string>
    <string name="bagikan_berita">Sandiaga Duduk Sebelah Prabowo di Istana, Janjian Ketemu Lagi</string>
    <string name="hapus_history">Hapus History</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="grid">Ubah tampilan</string>
    <string name="noting_data">Tidak ada data</string>
    <string name="data">Saya Istri Mas Chakra</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data berita otomatis</string>
    <string name="notif_title">Berita baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran!!</string>
</resources>