<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LihatBeritaUtamaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tombol_up"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:theme="@style/Theme.Newser.NoActionBarSetup"/>

            <ImageView
                android:id="@+id/image_berita_utama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/image_beritaprabowo" />

            <TextView
                android:id="@+id/title_berita_utama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_berita_utama"
                android:fontFamily="@font/playfairdisplaybold"
                android:textSize="25sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="5dp"
                    android:background="@drawable/ic_history"
                    android:backgroundTint="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="18/05/2023"
                    android:textColor="@color/black"
                    android:fontFamily="@font/playfairdisplaymedium"
                    android:textSize="15sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/deskripsi_berita_utama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/desc_berita_utama"
                android:textColor="@color/black"
                android:fontFamily="@font/playfairdisplayregular"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btn_share_berita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/share"
                android:fontFamily="@font/playfairdisplayregular"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/penulis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/about_1"
                android:fontFamily="@font/playfairdisplayitalic"
                android:textSize="10sp"
                android:textColor="@color/black"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/about_2"
                android:fontFamily="@font/playfairdisplayitalic"
                android:textSize="10sp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>